# longshoreman

./: Cargo.toml  readme.md
data/: users.json
src/: error.rs  main.rs
src/routes/: auth.rs  services.rs
src/service/: auth.rs  fs_struct.rs  init.rs  manager.rs  mod.rs  models.rs  user.rs
